Add the remaining CardDemo screens and posting jobs, plus parity suites
Online screens

- Sign-on (COSGN00C) as POST /api/signon. The USRSEC password comparison stays
  plaintext exactly as the program performs it, and the program's hard-coded role
  routing to COADM01C or COMEN01C becomes a role on the response instead of a
  server-side transfer.
- Main menu (COMEN01C) as GET /api/menu, returning the ten options the program
  builds for the caller's user type.
- Account view (COACTVWC) as GET /api/accounts/{acctId}, reading all five of the
  datasets the program touches.
- Card update (COCRDUPC) as PUT /api/cards/{cardNum}, keeping the field-by-field
  re-read and compare of 9300-CHECK-CHANGE-IN-REC ahead of the rewrite.
- The account update response, projected field for field from the COACTUP
  symbolic map.
- Bill payment's balance debit (COBIL00C) lifted into a service:
  ACCT-CURR-BAL = ACCT-CURR-BAL - TRAN-AMT at scale 2, truncating.

Spring Batch jobs

- Transaction validation (CBTRN02C), the POSTTRAN poster. Its four-stage
  card / account / credit-limit / expiration cascade short-circuits at each stage
  with no implicit fall-through, then either posts to the transaction file and
  updates the category balance or writes a 430-byte reject record carrying the
  reason the stage produced.
- Transaction posting (CBTRN01C) as a runnable job with no trigger: no schedule,
  no runner and no reference from another job's flow, matching the fact that no
  JCL invokes it.

Parity suites

Sixteen programs - CBACT01C, CBACT02C, CBACT03C, CBACT04C, CBSTM03B, CBTRN03C,
CSUTLDTC, COADM01C, COCRDLIC, COCRDSLC, COTRN00C, COTRN01C, COUSR00C, COUSR01C,
COUSR02C and COUSR03C - each gain a twenty-case suite seeded from the fixtures in
app/data/ASCII. Every case is compared field by field, not as whole strings, and
the diff count has to be zero for the program to count as done. The
cross-reference cases also exercise the 36-to-50 normalisation the cardxref
fixture needs, since i